# Monochrome

./: .gitignore  .travis.yml  CMakeLists.txt  README  README.md
bindings/python/: CMakeLists.txt  README.md  cmake_setup.bat  demo.py  setup.py  test_app.py  uiimage_test.py  uitabview_test.py
bindings/python/bindings_generator/: bindings_generator.py  py_from_cpp.py  template_generator.py
bindings/python/src/: monochrome_module.cpp
editor/: CMakeLists.txt  Editor.cpp  Editor.h  main.cpp  mclayout_reader.py  project_source_generator.py  template_project_source.cpp  template_project_source.h
editor/panels/: ButtonProperties.cpp  ButtonProperties.h  LabelProperties.cpp  LabelProperties.h  PlainViewProperties.cpp  PlainViewProperties.h  UIElementProperties.h  VariableCodeProperties.cpp  VariableCodeProperties.h
editor/utils/: EditorUtils.cpp  EditorUtils.h  ProjectGenerator.cpp  ProjectGenerator.h  ProjectWindowScriptController.cpp  ProjectWindowScriptController.h
mcstudio/: CMakeLists.txt  Editor.cpp  Editor.h  EditorCanvasController.h  GlobalResgitrationSystem.cpp  GlobalResgitrationSystem.h  McxSourceManager.cpp  McxSourceManager.h  ProjectView.cpp  ProjectView.h  Studio.cpp  Studio.h  StudioSettings.cpp  StudioSettings.h  StudioUtils.cpp  StudioUtils.h  WidgetProperties.cpp  WidgetProperties.h  WidgetTreeController.cpp  WidgetTreeController.h  WidgetTreeView.cpp  WidgetTreeView.h  main.cpp
mcstudio/controllers/: EditorCanvasController.cpp  EditorCanvasController.h  WidgetPropertiesPanelController.cpp  WidgetPropertiesPanelController.h
mcstudio/design_diagram/: mcstudio_design.drawio
mcstudio/mcx/: editor-panel.mcx  main.mcx  project-properties-panel.mcx  stylesheet.mcx  widget-properties-panel.mcx  widget-toolbox.mcx  widget-tree-view.mcx
mcstudio/user_widgets/: AlignmentPropertyField.cpp  AlignmentPropertyField.h  BaseWidgetPropertiesPanel.cpp  BaseWidgetPropertiesPanel.h  BooleanPropertyField.cpp  BooleanPropertyField.h  DockAnchorPropertyField.cpp  DockAnchorPropertyField.h  RegularPropertyTextField.cpp  RegularPropertyTextField.h
messenger-demo/: CMakeLists.txt  main.cpp  messenger_window.mcx  server.cpp
messenger-demo/tcp_friend/: tcp_friend.cpp  tcp_friend.hpp
src/: CMakeLists.txt  Monochrome.h  main.cpp
src/application/: AppManager.cpp  AppManager.h  ApplicationContext.cpp  ApplicationContext.h  CMakeLists.txt
src/core/: CMakeLists.txt  Core.cpp  Core.h  FunctionProfiler.cpp  FunctionProfiler.h  InternalFlags.cpp  InternalFlags.h  StackTracer.cpp  StackTracer.h
src/events/: CMakeLists.txt  CustomEvents.h  Event.cpp  Event.h  EventEmitter.cpp  EventEmitter.h  EventValidator.cpp  EventValidator.h  Events.h  FocusChangedEvent.h  IResponder.cpp  IResponder.h  KeyboardEvents.cpp  KeyboardEvents.h  MouseEvents.h  PropertyObserver.h  WindowEvents.h
src/graphics/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  Color.cpp  Color.h  Graphics.cpp  Graphics.h  RenderTarget.cpp  RenderTarget.h  Shapes.h  TextProperties.h
src/graphics/d2d_resources/: CoreResources.cpp  CoreResources.h
src/mcx/: CMakeLists.txt  McxEngine.cpp  McxEngine.h  McxNode.cpp  McxNode.h
src/mcx/adapters/: BaseWidgetMcxAdapter.cpp  BaseWidgetMcxAdapter.h  ButtonMcxAdapter.cpp  ButtonMcxAdapter.h  CMakeLists.txt  CheckboxMcxAdapter.cpp  CheckboxMcxAdapter.h  ComboboxMcxAdapter.cpp  ComboboxMcxAdapter.h  DockPanelMcxAdapter.cpp  DockPanelMcxAdapter.h  DropdownButtonMcxAdapter.cpp  DropdownButtonMcxAdapter.h  EntryMcxAdapter.cpp  EntryMcxAdapter.h  ImageMcxAdapter.cpp  ImageMcxAdapter.h  LabelMcxAdapter.cpp  LabelMcxAdapter.h  McxParsingAdapter.cpp  McxParsingAdapter.h  MenuListMcxAdapter.cpp  MenuListMcxAdapter.h  ProgressBarMcxAdapter.cpp  ProgressBarMcxAdapter.h  ScrollPanelMcxAdapter.cpp  ScrollPanelMcxAdapter.h  StackPanelMcxAdapter.h  (+11 more)
src/platform/: CMakeLists.txt  LinuxGraphics.h  LinuxRenderTarget.cpp  LinuxRenderTarget.h  LinuxWindow.cpp  LinuxWindow.h  OSXGraphics.mm  OSXRenderTarget.h  OSXWindow.h  WindowsGraphics.cpp  WindowsRenderTarget.h  WindowsWindow.cpp
src/rendering/: Bitmap.h  CMakeLists.txt  RenderTarget.h  Renderer.cpp  Renderer.h
src/ui/: Anchor.h  CMakeLists.txt  IDrawable.h  Layer.h  UICursor.cpp  UICursor.h  UIElements.h  UIFileDialogue.cpp  UIFileDialogue.h  UITimer.cpp  UITimer.h  UIView.cpp  UIView.h
src/utils/: CMakeLists.txt  Clipboard.h  Cursor.h  FileDialog.cpp  FileDialog.h  FileWatcher.cpp  FileWatcher.h  PlacementConstraintSystem.cpp  PlacementConstraintSystem.h  TextUtils.cpp  TextUtils.h  uuid.cpp  uuid.h
src/widgets/: AllWidgets.h  BaseContainerWidget.cpp  BaseContainerWidget.h  BaseWidget.cpp  BaseWidget.h  Button.cpp  Button.h  CMakeLists.txt  Checkbox.cpp  Checkbox.h  Color.cpp  Color.h  Combobox.cpp  Combobox.h  CustomRenderedWidget.h  DockPanel.cpp  DockPanel.h  DropdownButton.cpp  DropdownButton.h  Entry.cpp  Entry.h  Expander.cpp  Expander.h  FlowPanel.cpp  FlowPanel.h  GridPanel.cpp  GridPanel.h  Image.cpp  Image.h  Label.cpp  Label.h  Layer.h  MenuList.cpp  MenuList.h  Panel.cpp  Panel.h  ProgressBar.cpp  ProgressBar.h  ScrollPanel.cpp  ScrollPanel.h  (+19 more)
src/window/: CMakeLists.txt  Canvas2D.cpp  Canvas2D.h  ClassicWindow.cpp  ClassicWindow.h  EventProcessor.cpp  EventProcessor.h  FileMenu.cpp  FileMenu.h  FileMenuBar.cpp  FileMenuBar.h  MCWindow.h  ModernWindow.cpp  ModernWindow.h  NativeWindow.cpp  NativeWindow.h  Overlay.cpp  Overlay.h  SceneManager.cpp  SceneManager.h  UIWindow.cpp  UIWindow.h  WindowStyle.h
tests/: CMakeLists.txt  animations_test.cpp  demo.cpp  docking_demo.cpp  dockpanel_demo.cpp  file_chooser_test.cpp  image_demo.cpp  mcxapp_custom_panel.mcx  mcxapp_demo.cpp  mcxapp_demo.mcx  mcxapp_demo_window.mcx  menu_bar_test.cpp  multiple_windows.cpp  multiple_windows_test.cpp  overlay_test.cpp  performance_test.cpp  scrollpanel_test.cpp  splitter_demo.cpp  splitterpanel_example1.mcx  splitterpanel_example2.mcx  splitterpanel_example3.mcx  splitterpanel_example4.mcx  tabview_demo.cpp  tabview_demo.mcx  treeview_demo.cpp  uiimage_test.cpp  uitabview_test.cpp  window_control.cpp  window_control_test.cpp  window_events_test.cpp
(+873 files in other folders)
